# rust-function-template

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
src/exchange_outpost/: candle.rs  fin_data.rs  notifications.rs
